Vastly improved version of wine.

--- a/util/wine/ChangeLog
+++ b/util/wine/ChangeLog
@@ -1,3 +1,184 @@
+----------------------------------------------------------------------
+Tue May 17 23:03:16 1994  Bob Amstadt  (bob@pooh)
+
+	* [windows/dce.c]
+	Fixed bug with dce initialization that was causing dialog boxes to not
+	be displayed.
+
+	* [if1632/callback.c]
+	Better fix for bug found by Martin.
+
+Sat May 14 19:48:39 1994  Rick Sladkey  (jrs@world.std.com)
+
+        * [ memory/heap.c ]
+        Redirect HEAP_ReAlloc calls with NULL argument to HEAP_Alloc.
+
+May 16, 94 martin2@trgcorp.solucorp.qc.ca (Martin Ayotte)
+
+	* [objects/font.c]
+	Make EnumFonts() calling a callback with dummy fonts ... :-)
+
+	* [objects/text.c]
+	Add Empty Stub for ExtTextOut(), which temporarely call Textout().
+
+	* [if1632/callback.c]
+	Temporarely go around bug in CallWindowProc(), you will see printfs.
+
+	* [controls/edit.c]
+	Make EDIT controls focused by a mouse click.
+
+	* [misc/property.c]
+	Bug Fix in function EnumProps(), better use of CallBack16().
+
+	* [misc/mmsystem.c]
+	Basic Skelton's for MCI messages dispatching function.
+
+Sun May 15 16:15:17 1994  Erik Bos (erik@hacktic.nl)
+
+        * [windows/utility.c]
+        Added windows_wsprintf() for the emulator, wsprintf() is
+        for libwine.
+
+Sat May 14 22:16:40 1994  Rick Sladkey  (jrs@world.std.com)
+
+        * [misc/cursor.c]
+        Fix pointer problems in LoadCursor leading to heap corruption.
+
+        *  [ controls/menu.c ]
+        Fix two NULL dereferencing bugs.
+
+Sun May 15 20:07:48 1994  Rick Sladkey  (jrs@world.std.com)
+
+        * [objects/font.c]
+        Fix NULL pointer dereferencing bug in GetCharWidth.
+
+        * [loader/resource.c]
+        Fix under-allocation of memory in LoadAccelerators.
+
+        * [windows/class.c]
+        Ignore negative sizes for extra fields in RegisterClass.
+
+Sun May 15 06:35:03 1994  David Metcalfe <david@prism.demon.co.uk>
+
+        * [objects/metafile.c] [include/metafile.h] [include/windows.h]
+          [objects/gdiobj.c] [objects/brush.c] [objects/pen.c]
+          [objects/text.c] [objects/dcvalues.c] [windows/graphics.c]
+          [windows/dc.c] [windows/mapping.c]
+        Beginnings of metafile support.
+
+        * [misc/file.c]
+        Corrected spelling of _lcreat.
+
+        * [controls/edit.c]
+        Minor bug fixes.
+----------------------------------------------------------------------
+May 9, 94 martin2@trgcorp.solucorp.qc.ca (Martin Ayotte)
+
+	* [controls/scroll.c]
+	Make thumbtrack button disappear if scroll box ratio < 3:1.
+	Make arrow buttons rectangular if scroll box ratio < 2:1.
+	Add code for SBS_TOPALIGN, SBS_BOTTOMALIGN, 
+				SBS_LEFTALIGN & SBS_RIGHTALIGN.
+	Bug fix in NC_CreateScrollBars(), no more bigbutt in calendar.exe... :-)
+
+	* [loader/library.c] [loader/task.c] [misc/exec.c]
+	Continue playing around trying to get a second task running.
+
+	* [windows/mdi.c]
+	Change OBM_CLOSE for OBM_OLD_CLOSE, a smaller dot button when maximized.
+
+	* [everywhere]
+	Adding previous works of the Apr 25, 94.
+
+Tue May 10 18:09:14 1994 Erik Bos (erik@trashcan.hacktic.nl)
+
+	* [if1632/mmsystem.spec] [misc/mmsystem.c] [include/mmsystem.h]
+	Added Martin's mmsystem.dll stubs.
+
+	* [misc/sound.c]
+	Added remaining stubs for sound.dll.
+
+	* [if1632/shell.spec] [misc/shell.c]
+	Fixed prototypes (I found them in BC 4) and added ShellAbout()
+	and AboutDlgProc().
+
+----------------------------------------------------------------------
+May 1, 94 martin2@trgcorp.solucorp.qc.ca (Martin Ayotte)
+
+	* [loader/signal.c]
+	Add XUngrabPointer() & XUngrabServer() in wine_fault().
+
+Fri Apr 22 19:30:08 1994  Erik Bos (erik@trashcan.hacktic.nl)
+
+	* [objects/bitblt.c]
+	color_stretch() rewritten to use ints only. *fast!*
+	BLACKONWHITE & WHITEONBLACK stretchmodes redirected to
+	use color_stretch().
+
+Mon May  2 21:39:43 1994  Erik Bos (erik@trashcan.hacktic.nl)
+
+	* [controls/menu.c]
+	SetSysMenu() added.
+
+	* [misc/cursor.c]
+	GetCursor() added.
+
+	* [misc/main.c]
+	SwapMouseButton() added, (NOP).
+
+	* [windows/win.c]
+	GetDesktopHwnd() added.
+
+	* [if1632/*spec]
+	Added not implemented functions defs as comment.
+
+	* [misc/winsocket.c]
+	Change WSAGetXbyY() functions to non-blocking ones,
+	Added WSAAsyncSelect(). 
+	(WSA functions can't be canceled yet).
+
+Wed Apr 20 23:58:58 1994  Scott A. Laird  (scott@curly)
+
+	* misc/profile.c: Fixed bug with GetIniFileName returning wrong
+	path when given a simple file name.  Fixed GetSetProfile to allow
+	enumerating all key names when KeyName is null.
+
+Apr 25, 94 martin2@trgcorp.solucorp.qc.ca (Martin Ayotte)
+
+	* [objects/bitblt.c]
+	Add protection to BitBlt() & StretchBlt() for width or height = 0.
+
+	* [windows/nonclient.c]
+	Avoid painting in NC_DoNCPaint() if IsWindowVisible().
+	Simplify NC_TrackMouseMenuBar() because code moved to MenuFocusLoop().
+
+	* [windows/win.c]
+	CreateWindowEx() & DestroyWindow() now call respectively
+		AddWindowToTask() & RemoveWindowFromTask().
+	New empty stub for function AnyPopup().
+
+	* [loader/library.c]
+	Bug Fix : GetModuleFileName() now return full path filename.
+
+	* [include/menu.h] [controls/menu.c]
+	Add hText handle and remove obsolete MENUITEM struct members.
+	Add a ReleaseCapture() in SetMenu() when menubar changed while captured.
+	Add MenuMouseMove() MenuButtonUp() in function MenuFocusLoop().
+
+	* [misc/file.c]
+	GetTempFilename() now create a file.
+	_lcreate() use unix open (name, mode, perm), with perm=O666.
+
+	* [if1632/relay.c]
+	Remove temporarly builtin SHELL.DLL, Add MMSYSTEM.DLL in builtin list.
+
+	* New file [misc/mmsystem.c]
+	* New file [include/mmsystem.h]
+	* New file [if1632/mmsystem.spec]
+	Many, many empty stubs ... :-)
+
+----------------------------------------------------------------------
+
 Wed Apr 20 14:53:35 1994  Bob Amstadt  (bob@pooh)
 
 	* [tools/build.c] [if1632/call.S] [if1632/Imakefile]
@@ -25,8 +206,6 @@ Apr 18, 94 martin2@trgcorp.solucorp.qc.ca (Martin Ayotte)
 	* New files [loader/task.c] & [include/task.h]
 	Move functions GetWindowTask(), GetNumTask(), EnumTaskWindows()
 		from 'loader/library.c'.
-
-	* [loader/library.c]
 
 	* [if1632/user.c] [if1632/kernel.c]
 	Put Atoms functions entries.
