--- a/util/wine/README
+++ b/util/wine/README
@@ -171,6 +171,25 @@ bob@amscons.com
 
 7. WHAT'S NEW
 
+WHAT'S NEW with Wine-940518: (see ChangeLog for details)
+	- debugger improvements
+	- bug fixes to get some dialog boxes working.
+	- skeleton for passing MCI functions.
+	- beginnings of metafile support.
+	- and many many bug fixes!
+
+WHAT'S NEW with Wine-940510: (see ChangeLog for details)
+	- debugger improvements
+	- mmsystem
+	- ShellAbout() and AboutDlgProc()
+	- and many many bug fixes!
+
+WHAT'S NEW with Wine-940505: (see ChangeLog for details)
+	- faster color_stretch()
+	- SetSysMenu(), GetCursor(), GetDesktopWindow()
+	- WSAGetXbyY() now non-blocking	
+	- and many many bug fixes!
+
 WHAT'S NEW with Wine-940420: (see ChangeLog for details)
 	- new property functions
 	- new listbox and combo box functions
