--- a/util/ispell/ispell.4
+++ b/util/ispell/ispell.4
@@ -1,5 +1,5 @@
 .\"
-.\" $Id: ispell.4,v 1.1 1994/05/25 01:02:41 asami Exp $
+.\" $Id: ispell.4,v 1.2 1994/05/25 01:27:50 asami Exp $
 .\"
 .\" Copyright 1992, 1993, Geoff Kuenning, Granada Hills, CA
 .\" All rights reserved.
@@ -38,9 +38,18 @@
 .\" SUCH DAMAGE.
 .\"
 .\" $Log: ispell.4,v $
-.\" Revision 1.1  1994/05/25 01:02:41  asami
-.\" Initial revision
+.\" Revision 1.2  1994/05/25 01:27:50  asami
+.\" This is the FreeBSD port by Piero Serini (piero@strider.st.dsi.unimi.it).
+.\" Fixes include specifying correct dictionary (/usr/share/dict/words),
+.\" changing Makefiles, adding package target, etc.
 .\"
+.\" Note that this package requires an enormous amount of free disk space in
+.\" /usr/tmp (30MB according to Piero).  There is no /usr/tmp on freefall so
+.\" I couldn't compile it here but it worked at my home machine.
+.\"
+# Revision 1.1  1994/05/08  12:56:24  piero
+# Initial revision
+#
 .\" Revision 1.25  1994/01/25  07:11:42  geoff
 .\" Get rid of all old RCS log lines in preparation for the 3.1 release.
 .\"
