--- a/util/ispell/sq.1
+++ b/util/ispell/sq.1
@@ -1,5 +1,5 @@
 .\"
-.\" $Id: sq.1,v 1.1 1994/05/25 01:02:47 asami Exp $
+.\" $Id: sq.1,v 1.2 1994/05/25 01:28:09 asami Exp $
 .\"
 .\" Copyright 1992, 1993, Geoff Kuenning, Granada Hills, CA
 .\" All rights reserved.
@@ -38,9 +38,18 @@
 .\" SUCH DAMAGE.
 .\"
 .\" $Log: sq.1,v $
-.\" Revision 1.1  1994/05/25 01:02:47  asami
-.\" Initial revision
+.\" Revision 1.2  1994/05/25 01:28:09  asami
+.\" This is the FreeBSD port by Piero Serini (piero@strider.st.dsi.unimi.it).
+.\" Fixes include specifying correct dictionary (/usr/share/dict/words),
+.\" changing Makefiles, adding package target, etc.
 .\"
+.\" Note that this package requires an enormous amount of free disk space in
+.\" /usr/tmp (30MB according to Piero).  There is no /usr/tmp on freefall so
+.\" I couldn't compile it here but it worked at my home machine.
+.\"
+# Revision 1.1  1994/05/08  12:56:24  piero
+# Initial revision
+#
 .\" Revision 1.6  1994/01/25  07:12:07  geoff
 .\" Get rid of all old RCS log lines in preparation for the 3.1 release.
 .\"
@@ -60,7 +69,7 @@ unsq \- unsqueeze a sorted word list
 compresses a sorted list of words (a dictionary). 
 For example:
 .RS
-sort /usr/dict/words | sq | compress > words.sq.Z
+sort /usr/share/dict/words | sq | compress > words.sq.Z
 .RE
 will compress dict by about a factor of 4.
 .PP
